# Frenetix

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  default.nix  flake.nix  pyproject.toml  requirements.txt  setup.py  setup_build_and_install_local.sh  setup_drivability_checker.sh  setup_local.sh  setup_script1.sh  setup_wheel.sh  setup_with_docker.sh
.github/workflows/: build_wheels.yml
cmake/: AppleOpenMP.cmake  ci-prefetch-dependencies.cmake
include/geometry/: curvilinear_coordinate_system.h
include/geometry/serialize/: basic_types.h  icurvilinear_coordinate_system_export.h  serialize.h  serialize_reg_impl.h  vector2d_export.h
include/geometry/serialize/export_structs/: curvilinear_coordinate_system_export_struct.h
src/: CMakeLists.txt  CoordinateSystemWrapper.cpp  CoordinateSystemWrapper.hpp  TrajectoryHandler.cpp  TrajectoryHandler.hpp  geometryMsgs.cpp  geometryMsgs.hpp  main.cpp  util.cc  util.cpp  util.hpp
src/math/: covariance.hpp  mvn.cpp  mvn.hpp  mvndst.hpp
src/pybind11Bindings/: cartesianSampleBinding.cpp  cartesianSampleBinding.hpp  coordinateSystemWrapperBinding.cpp  coordinateSystemWrapperBinding.hpp  costStrategyBinding.cpp  costStrategyBinding.hpp  curviLinearSampleBinding.cpp  curviLinearSampleBinding.hpp  feasabilityStrategyBinding.cpp  feasabilityStrategyBinding.hpp  geometryMsgsBinding.cpp  geometryMsgsBinding.hpp  handlerBinding.cpp  handlerBinding.hpp  loggingSink.cpp  loggingSink.hpp  mainBindings.cpp  polynomialTrajectoryBinding.cpp  polynomialTrajectoryBinding.hpp  trajectorySampleBinding.cpp  trajectorySampleBinding.hpp  trajectoryStrategyBinding.cpp  trajectoryStrategyBinding.hpp
src/pybind11Bindings/trajectoryFunctionsBinding/: costFunctionsBinding.cpp  costFunctionsBinding.hpp  feasabilityFunctionsBinding.cpp  feasabilityFunctionsBinding.hpp  otherFunctionsBinding.cpp  otherFunctionsBinding.hpp
src/python/_frenetix/: __init__.py
src/python/frenetPlannerHelper/: __init__.py  __init__.pyi
src/python/frenetPlannerHelper/_frenetPlannerHelper/: __init__.pyi
src/python/frenetPlannerHelper/_frenetPlannerHelper/trajectory_functions/: __init__.pyi
src/python/frenetPlannerHelper/_frenetPlannerHelper/trajectory_functions/cost_functions/: __init__.pyi
src/python/frenetPlannerHelper/_frenetPlannerHelper/trajectory_functions/feasability_functions/: __init__.pyi
src/python/frenetPlannerHelper/trajectory_functions/: __init__.py  __init__.pyi
src/python/frenetPlannerHelper/trajectory_functions/cost_functions/: __init__.py  __init__.pyi
src/python/frenetPlannerHelper/trajectory_functions/feasability_functions/: __init__.py  __init__.pyi
src/python/frenetix/: __init__.py  __init__.pyi  _version.py  _version.pyi
src/python/frenetix/_frenetix/: __init__.pyi
src/python/frenetix/_frenetix/trajectory_functions/: __init__.pyi  cost_functions.pyi  feasability_functions.pyi
src/python/frenetix/_frenetix/trajectory_functions/cost_functions/: __init__.pyi
src/python/frenetix/_frenetix/trajectory_functions/feasability_functions/: __init__.pyi
src/python/frenetix/trajectory_functions/: __init__.py  __init__.pyi
src/python/frenetix/trajectory_functions/cost_functions/: __init__.py  __init__.pyi
src/python/frenetix/trajectory_functions/feasability_functions/: __init__.py  __init__.pyi
src/serialize/: serialize_curvil_cs.cc
src/strategies/: CostStrategy.hpp  FeasabilityStrategy.hpp  TrajectoryStrategy.hpp
src/strategies/CostFunctions/: CalculateAccelerationCost.cpp  CalculateAccelerationCost.hpp  CalculateCollisionProbabilityFast.cpp  CalculateCollisionProbabilityFast.hpp  CalculateCollisionProbabilityMahalanobis.cpp  CalculateCollisionProbabilityMahalanobis.hpp  CalculateDistanceToObstacleCost.cpp  CalculateDistanceToObstacleCost.hpp  CalculateDistanceToReferencePathCost.cpp  CalculateDistanceToReferencePathCost.hpp  CalculateJerkCost.cpp  CalculateJerkCost.hpp  CalculateLaneCenterOffsetCost.cpp  CalculateLaneCenterOffsetCost.hpp  CalculateLateralAccelerationCost.cpp  CalculateLateralAccelerationCost.hpp  CalculateLateralJerkCost.cpp  CalculateLateralJerkCost.hpp  CalculateLateralVelocityCost.cpp  CalculateLateralVelocityCost.hpp  CalculateLongitudinalAccelerationCost.cpp  CalculateLongitudinalAccelerationCost.hpp  CalculateLongitudinalJerkCost.cpp  CalculateLongitudinalJerkCost.hpp  CalculateLongitudinalVelocityCost.cpp  CalculateLongitudinalVelocityCost.hpp  CalculateNegativeAccelerationCost.cpp  CalculateNegativeAccelerationCost.hpp  CalculateNegativeOrientationOffsetCost.cpp  CalculateNegativeOrientationOffsetCost.hpp  CalculateNegativeVelocityOffsetCost.cpp  CalculateNegativeVelocityOffsetCost.hpp  CalculateOrientationOffsetCost.cpp  CalculateOrientationOffsetCost.hpp  CalculatePositiveAccelerationCost.cpp  CalculatePositiveAccelerationCost.hpp  CalculatePositiveOrientationOffsetCost.cpp  CalculatePositiveOrientationOffsetCost.hpp  CalculatePositiveVelocityOffsetCost.cpp  CalculatePositiveVelocityOffsetCost.hpp  (+8 more)
src/strategies/FeasabilityFunctions/: CheckAccelerationConstraint.cpp  CheckAccelerationConstraint.hpp  CheckCurvatureConstraints.cpp  CheckCurvatureConstraints.hpp  CheckCurvatureRateConstrains.cpp  CheckCurvatureRateConstrains.hpp  CheckVelocityConstraints.cpp  CheckVelocityConstraints.hpp  CheckYawRateConstraint.cpp  CheckYawRateConstraint.hpp
src/strategies/Functions/: ComputeInitalState.cpp  ComputeInitalState.hpp  FillCoordinates.cpp  FillCoordinates.hpp
src/trajectory/: CartesianSample.cpp  CartesianSample.hpp  CurvilinearSample.cpp  CurvilinearSample.hpp  TrajectorySample.cpp  TrajectorySample.hpp  polynomial.hpp
