[project]
name = "frenetix"
description = "C++-accelerated Frenet Trajectory Planning Handler"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = {text = "LGPL-3.0-or-later"}
authors = [
    { name = "Georg Schmalhofer", email = "georg.schmalhofer@tum.de" },
    { name = "Tobias Markus", email = "tobias.markus@tum.de" },
    { name = "Rainer Trauth", email = "rainer.trauth@tum.de" },
]
maintainers = [
    { name = "Rainer Trauth", email = "rainer.trauth@tum.de" },
]

dependencies = [
    # Only required for stubs (numpy.typing)
    "numpy>=1.20"
]

[project.urls]
"Homepage" = "https://github.com/TUM-AVS/Frenetix"
"Bug Tracker" = "https://github.com/TUM-AVS/Frenetix/issues"

[build-system]
requires = [
    "scikit-build-core~=0.9.4",
    "nanobind~=2.0.0",
    "setuptools_scm[toml]~=8.0.3"
]

build-backend = "scikit_build_core.build"

[tool.setuptools_scm]
write_to = "src/python/frenetix/_version.py"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/python/frenetix/_version.py"]

wheel.packages = [ "src/python/frenetix" ]

build-dir = "build-python/{build_type}-{wheel_tag}"

cmake.version = ">=3.26.1"

# Ninja >= 1.10 required for Fortran support
ninja.version = ">=1.10"

install.components = ["PythonModules"]

[tool.cibuildwheel]
# Skip building PyPy and musllinux wheels
skip = "pp* *-musllinux*"

archs = ["auto"]
environment = { PIP_DISABLE_PIP_VERSION_CHECK="1" }
build-verbosity = 1

